[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/dialogue_box.png" type="Texture" id=1]
[ext_resource path="res://art/protagonist_portrait.png" type="Texture" id=2]
[ext_resource path="res://art/boss_portrait.png" type="Texture" id=3]
[ext_resource path="res://art/dialogue_background.png" type="Texture" id=4]
[ext_resource path="res://font/IndieFlower-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Dialogue.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Dialogue" type="Node2D"]
script = ExtResource( 6 )

[node name="DialogueBackground" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 4 )

[node name="BossPortrait" type="Sprite" parent="."]
position = Vector2( 369, 260 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="ProtagonistPortrait" type="Sprite" parent="."]
position = Vector2( 728, 204 )
scale = Vector2( 0.328143, 0.328143 )
texture = ExtResource( 2 )

[node name="DialogueBox" type="Sprite" parent="."]
position = Vector2( 502, 304 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 107.0
margin_top = 420.0
margin_right = 936.0
margin_bottom = 548.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "My  boss is a busy lady... She don't have time to find a buncha guys who all look different..."
autowrap = true
